[gd_scene load_steps=14 format=2]

[ext_resource path="res://Animations/EXPLOSION/GRENADE_EXPLOSION3.png" type="Texture" id=1]
[ext_resource path="res://Animations/EXPLOSION/MOLOTOV_EXPLOSION1.png" type="Texture" id=2]
[ext_resource path="res://Animations/EXPLOSION/MOLOTOV_EXPLOSION2.png" type="Texture" id=3]
[ext_resource path="res://Animations/EXPLOSION/MOLOTOV_EXPLOSION4.png" type="Texture" id=4]
[ext_resource path="res://Animations/EXPLOSION/GRENADE_EXPLOSION4.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Explosion.gd" type="Script" id=6]
[ext_resource path="res://Animations/EXPLOSION/MOLOTOV_EXPLOSION3.png" type="Texture" id=7]
[ext_resource path="res://Animations/EXPLOSION/MOLOTOV_EXPLOSION5.png" type="Texture" id=8]
[ext_resource path="res://Animations/EXPLOSION/GRENADE_EXPLOSION1.png" type="Texture" id=9]
[ext_resource path="res://Animations/EXPLOSION/GRENADE_EXPLOSION2.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "MOLOTOV",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "GRENADE",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[node name="Explosion" type="AnimatedSprite"]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "GRENADE"
frame = 1
script = ExtResource( 6 )

[node name="GRENADE" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GRENADE"]
shape = SubResource( 2 )
disabled = true

[node name="MOLOTOV" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MOLOTOV"]
shape = SubResource( 3 )
disabled = true

[connection signal="animation_finished" from="." to="." method="_on_Explosion_animation_finished"]
[connection signal="body_entered" from="GRENADE" to="." method="_on_GRENADE_body_entered"]
[connection signal="body_entered" from="MOLOTOV" to="." method="_on_MOLOTOV_body_entered"]
